@@ -1,3 +1,9 @@
+2008-12-23 Samuel Abels <http://debain.org>
+
+	* src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py, 
+	src/Exscript/Interpreter/stdlib/Sys/run.py,
+	src/Exscript/Interpreter/stdlib/Sys/message.py: Add a status bar.
+
 2008-12-22 Samuel Abels <http://debain.org>
 
 	* src/Exscript/Interpreter/stdlib/File/write.py: Add mode argument to the
